[TASK] - Fixed z-index of top message when touch is enabled. - Added more fallbacks for fonts. - Added borderline to message-wrap so it's easier to distinguish from the webpage. - Border-radius for button is smaller and looks more consistent on styling v1. - X for close-button is more centered and the box is square in styling v1. - More margin between text and read more-link and the elements work better responsively in styling v1.

--- a/Resources/Public/Css/bar_v_1.css
+++ b/Resources/Public/Css/bar_v_1.css
@@ -2,7 +2,7 @@
 .top-message-wrap {
     position: fixed;
     top: 0;
-    z-index: 6000;
+    z-index: 7200;
     width: 100%;
 }
 
@@ -18,9 +18,9 @@
     margin: 0;
     font-size: 11px;
     line-height: 15px;
-    font-family: Verdana, Arial;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     position: relative;
-    padding-right: 30px;
+    margin-bottom: 4px;
 }
 
 #pxa-cookie-mess .cookie-container {
@@ -28,33 +28,32 @@
 }
 
 #pxa-cookie-mess .cookie-container .btn-close {
+    text-align: center;
+    min-width: 36px;
     float: right;
     cursor: pointer;
     text-decoration: none;
     border: 1px solid;
-    border-radius: 10px;
+    border-radius: 3px;
     padding: 4px 6px 5px 6px;
-    /*position: absolute;
-    top: 5px;
-    right: 5px;
-    margin: -2px;*/
+    font-family: Verdana, sans-serif;
 }
 
 #pxa-cookie-mess .cookie-container .btn-close:hover {
-    padding: 4px 6px 5px 6px;
-    /*margin: -1px;*/
     color: #000000;
-
 }
 
 #pxa-cookie-mess .cookie-container .agree-buttons {
+    text-align: center;
+    min-width: 30px;
     cursor: pointer;
     text-decoration: none;
     border: 1px solid;
-    border-radius: 10px;
-    padding: 4px 6px 5px 6px;
+    border-radius: 3px;
+    padding: 4px 15px 5px 15px;
     position: relative;
-    top: 7px;
+    margin: 7px 10px 0 0;
+    display: inline-block;
 }
 
 #pxa-cookie-mess .cookie-container #accept-cookie {
@@ -62,26 +61,36 @@
 }
 
 #pxa-cookie-mess .cookie-container #accept-cookie:hover {
-    color: #609C30;
+    color: #509815;
 }
 
 #pxa-cookie-mess .cookie-container #decline-cookie {
     color: #F14A29;
-    margin-left: 10px;
 }
 
 #pxa-cookie-mess .cookie-container #decline-cookie:hover {
-    color: #C43E23;
+    color: #b12408;
 }
 
 #pxa-cookie-mess .cookie-warning {
-    color: #82787d;
+    border-style: solid;
+    border-width: 0;
+    border-color: #808080;
+    color: #808080;
     padding: 10px 0 15px 0;
     background-image: -webkit-linear-gradient(-90deg, rgb(254, 254, 254) 0%, rgb(248, 248, 248) 68%, rgb(230, 230, 230) 100%);
     background-image: -ms-linear-gradient(-90deg, rgb(254, 254, 254) 0%, rgb(248, 248, 248) 68%, rgb(230, 230, 230) 100%);
     background-image: linear-gradient(-180deg, rgb(254, 254, 254) 0%, rgb(248, 248, 248) 68%, rgb(230, 230, 230) 100%);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#fffefefe,endColorstr=#ffe6e6e6,GradientType=0)";
     filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#fffefefe,endColorstr=#ffe6e6e6,GradientType=0)";
+}
+
+#pxa-cookie-mess.top-message-wrap .cookie-warning {
+    border-bottom-width: 1px;
+}
+
+#pxa-cookie-mess.bottom-message-wrap .cookie-warning {
+    border-top-width: 1px;
 }
 
 #pxa-cookie-mess .cookie-warning .close {
@@ -113,10 +122,6 @@
 }
 
 @media (max-width: 420px) {
-    .passive-consent .cookie-warning div {
-        display: block;
-    }
-
     .passive-consent .close-button {
         margin-top: 3px;
     }
