--- a/Resources/Public/Css/bar_v_2.css
+++ b/Resources/Public/Css/bar_v_2.css
@@ -6,7 +6,7 @@
 
 .top-message-wrap {
     top: 0;
-    z-index: 6000;
+    z-index: 7200;
     position: fixed;
 }
 
@@ -20,7 +20,7 @@
     color: #fff;
     font-size: 14px;
     line-height: 20px;
-    font-family: Verdana, Arial;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     position: relative;
     margin: 0;
 }
@@ -37,7 +37,7 @@
 #pxa-cookie-mess .cookie-container .btn-close {
     font-size: 14px;
     line-height: 20px;
-    font-family: Verdana, Arial;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     cursor: pointer;
     text-decoration: none;
     border: none;
@@ -59,7 +59,7 @@
 #pxa-cookie-mess .cookie-container .agree-buttons {
     font-size: 14px;
     line-height: 20px;
-    font-family: Verdana, Arial;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     cursor: pointer;
     text-decoration: none;
     border: none;
@@ -119,7 +119,7 @@
 #pxa-cookie-mess a {
     font-size: 14px;
     line-height: 20px;
-    font-family: Verdana, Arial;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
     display: inline-block;
     color: #fff;
     text-decoration: underline;
